Update introduction.astro (#18)
Co-authored-by: Chris Raymond-Bertrand <jcrb7800@gmail.com>

--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -16,15 +16,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <SubSection title="Newton's Laws">
 
-
-<p>
-    Newton's equations relate the acceleration <InlineEquation equation='\\vec{a}' /> of a point mass with mass <InlineEquation equation='m' /> to the total applied force <InlineEquation equation='\\vec{F}' /> on the mass (sum of all applied forces).
-</p>
-
-<p>
-    There is no derivation for Newton's equations, because they are an assumed model for dynamics. We can only verify them by comparing with experimental evidence, which confirms that Newtonian dynamics are accurate for non-relativistic and non-quantum systems.
-</p>
-
+Newton's equations relate the acceleration <InlineEquation equation='\\vec{a}' /> of a point mass with mass <InlineEquation equation='m' /> to the total applied force <InlineEquation equation='\\vec{F}' /> on the mass (sum of all applied forces). There is no derivation for Newton's equations, because they are an assumed model for dynamics. We can only verify them by comparing with experimental evidence, which confirms that Newtonian dynamics are accurate for non-relativistic and non-quantum systems.
 
 
 </SubSection>
