Update stress.astro (#32)
Removed test callout card and edited video callout card

Co-authored-by: Chris Raymond-Bertrand <jcrb7800@gmail.com>

--- a/src/pages/sol/stress.astro
+++ b/src/pages/sol/stress.astro
@@ -115,6 +115,13 @@ We consider a homogeneous distribution of the internal force <InlineEquation equ
 
 <SubSubSection title="Average Shear Stress">
 
+<CalloutContainer slot="cards">
+    <CalloutCard title="Extra!">
+        <p class="m-0"><u>Supplemental video:</u></p>
+        <iframe src="https://www.youtube.com/embed/aQf6Q8t1FQE?si=cSAplDLVMVYzCZRx" class="w-100" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </CalloutCard>
+</CalloutContainer>
+
 <Image src="/Solid_Mechanics/Stress-Figures/Shear Stress.png" width="2"> Shear stress</Image>
 
  Obtained when transverse forces are applied to a member. The distribution of shear stresses cannot be assumed uniform. Common in bolts, pins and rivets used to connect various structural members.
