--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -41,10 +41,11 @@ The mutual forces of action and reaction between two particles are equal, opposi
 
 <SubSubSection title="Example">
 
+<PrairieDrawCanvas id="rep-ff-c" width="600" height="600" >
+	<p>A point mass moving in the plane with an applied force. You can try to made the mass move in a circle and then see what happens when the force is suddenly removed, which will demonstrate Newton's first law (no net force implies motion at constant speed in a constant direction). Also observe which force directions cause the speed to increase or decrease.</p>
 
-    <PrairieDrawCanvas id="rep-ff-c" width="600" height="600">
-        <small><em>Click and drag to impart a force on the particle and observe its velocity and position changes.</em></small>
-    </PrairieDrawCanvas>
+  <small><em>Click and drag to impart a force on the particle.</em></small>
+</PrairieDrawCanvas>
 
 </SubSubSection>
 
@@ -134,3 +135,4 @@ A <em>rigid body</em> is an extended area of material that
 </Layout>
 
 <script src="/sta/introduction/canvases.js" is:inline></script>
+
