--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,11 +42,11 @@ console.log(cleaned)
 		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="/static/css/sidebar.css">
 	</head>
-	<body class="pb-5 w-100">
+	<body class="w-100">
 		<Navbar/>
-		<div class="container-xxl content">
+		<div class="container-xxl content mb-5">
 			<SidebarContainer page={pagename} course={course}/>
-			<div class="w-100 pt-3">
+			<div class="w-100 pt-0 pt-xl-3">
 				<slot />
 			</div>
 
@@ -81,6 +81,18 @@ console.log(cleaned)
 	.callout-grid{
 		display: grid;
 		grid-template-columns: 1fr;
+	}
+
+	.content{
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+
+
+	@media (min-width: 1200px){
+		.content{
+			grid-template-columns: 1fr 5fr;
+		}
 	}
 
 	@media (min-width: 992px){
