--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -38,7 +38,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </style>
 
 <Layout title="Vectors">
-<Section title="Vectors">
+<Section title="Vectors" id="vectors">
 
     <p>
         A <em>vector</em> is an arrow with a length and a
@@ -66,7 +66,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         </PrairieDrawCanvas>
 </Section>
 
-<SubSection title="Notation">
+<SubSection title="Notation" id="notation">
 
     <p>
         Some textbooks differentiate between <em>free
@@ -83,7 +83,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
       </p>
 </SubSection>
 
-<SubSection title="Cartesian coordinate system">
+<SubSection title="Cartesian coordinate system" id="cartesian_coordinate_system">
 
     <p>
         Cartesian coordinates (also known as rectangular
@@ -160,7 +160,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSection>
 
-<SubSection title="Polar coordinate system">
+<SubSection title="Polar coordinate system" id="polar_coordinate_system">
 
     <p>
         Polar coordinates are an alternative 2D coordinate system
@@ -266,7 +266,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSection>
 
-<SubSection title="Units">
+<SubSection title="Units" id="units">
 
     <p>
         When using coordinates to describe the location of physical
@@ -326,7 +326,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSection>
 
-<SubSection title="Unit vectors">
+<SubSection title="Unit vectors" id="unit_vectors">
 
     <p>
       A <em>unit vector</em> is any vector with a length of
@@ -369,7 +369,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </Center>
 </SubSection>
 
-<SubSection title="Vectors bases">
+<SubSection title="Vectors bases" id="vectors_bases">
 
     <p>
       To describe vectors mathematically, we write them as a
@@ -455,7 +455,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSection>
 
-<SubSubSection title="Length of vectors">
+<SubSubSection title="Length of vectors" id="length_of_vectors">
   <p>
     The length of a vector <InlineEquation equation="\\vec{a}" /> is written
     either <InlineEquation equation="\\| \\vec{a} \\|" /> or just plain \(a\). The
@@ -558,7 +558,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </CalloutContainer>
 </SubSubSection>
 
-<SubSection title="Changing bases">
+<SubSection title="Changing bases" id="changing_bases">
 
     <p>
       To change the basis that a vector is written in, we need
@@ -795,7 +795,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </Example>
 </SubSection>
 
-<SubSection title="Projection and complementary projection">
+<SubSection title="Projection and complementary projection" id="projection_and_complementary_projection">
 
     <p>
       The projection and complementary projection are:
@@ -836,7 +836,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </DisplayEquation>
 </SubSection>
 
-<SubSection title="Change in length and direction">
+<SubSection title="Change in length and direction" id="change_in_length_and_direction">
 
     <p>
       Two useful derivatives are the rates of change of a vector's
@@ -924,7 +924,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </Center>
 </SubSection>
 
-<SubSection title="Spherical Coordinates">
+<SubSection title="Spherical Coordinates" id="spherical_coordinates">
 
     <p>
       The spherical coordinate system extends polar coordinates
@@ -1179,9 +1179,9 @@ import DisplayTable from "../../components/DisplayTable.astro"
   </DisplayEquation>
 </SubSection>
 
-<SubSection title="Applications"></SubSection>
+<SubSection title="Applications" id="applications"></SubSection>
 
-<SubSubSection title="Haystack antenna">
+<SubSubSection title="Haystack antenna" id="haystack_antenna">
   <p>
     The Haystack antenna is a large radio telescope used for radar astronomy, 
     atmospheric science, and satellite tracking. When tracking objects in space,  
@@ -1216,7 +1216,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 </SubSubSection>
 
-<SubSubSection title="Shortest flight paths">
+<SubSubSection title="Shortest flight paths" id="shortest_flight_paths">
 
     <p>
       If we want to fly from Urbana, USA to Delhi, India, which
@@ -1300,7 +1300,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSubSection>
 
-<SubSubSubSection title="Shortest paths on the sphere">
+<SubSubSubSection title="Shortest paths on the sphere" id="shortest_paths_on_the_sphere">
   <p>
     Finding the shortest distance between two points on the
     sphere is not a simple calculation given their latitude and
@@ -1421,7 +1421,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </CalloutContainer>
 </SubSubSubSection>
 
-<SubSubSubSection title="Proof that great circles are shortest paths">
+<SubSubSubSection title="Proof that great circles are shortest paths" id="proof_that_great_circles_are_shortest_paths">
 
   <p>
     Given any two points <InlineEquation equation="A" /> and <InlineEquation equation="B" /> on the surface of the
