--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -24,7 +24,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </style>
 
 <Layout title="Cartesian Coordinates">
-<Section title="Cartesian Coordinates">
+<Section title="Cartesian Coordinates" id="cartesian_coordinates">
 
     <p>
         Cartesian coordinates (also known as rectangular
@@ -84,7 +84,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </Section>
 
-<SubSection title="Vector Bases">
+<SubSection title="Vector Bases" id="vector_bases">
 
     <p>
         To describe vectors mathematically, we write them as a
@@ -152,7 +152,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSection>
 
-<SubSection title="Right Hand Rule">
+<SubSection title="Right Hand Rule" id="right_hand_rule">
 
 The Cartesian system is a "right-handed" coordinate system, which means that we can use the right-hand rule to determine the direction of the <InlineEquation equation='x, y' /> and <InlineEquation equation='z' /> axes. In 3D the <InlineEquation equation='x, y, z' /> axes are oriented in right-handed order, so that fingers curling from <InlineEquation equation='x' /> to <InlineEquation equation='y' /> means the thumb points in the <InlineEquation equation='z' /> direction.
 
