--- a/src/components/NavTree.astro
+++ b/src/components/NavTree.astro
@@ -71,43 +71,35 @@
 ---
 
 <style>
-    .subsection{
-        margin-left: 1rem;
-    }
-
     .sidebar-btn:before{
         content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
     }
 
-    .subsubsection{
-        margin-left: 1rem;
-        color: #808080;
-    }
+    
 
     #nav-tree-container_ul{
         list-style-type: none;
     }
 
-    @media (max-width: 1200px){
-        #hideable-container{
-            display: flex;
-            flex-direction: column;
-        }
+    #hideable-container{
+        display: flex;
+        flex-direction: column;
     }
 </style>
 
-<div class="d-flex flex-column align-items-left mb-0 mb-xl-4 ps-3 mt-3 mt-xl-0" id="hideable-container">
-
-    <p class="mb-2 fw-bold text-black h5 text-decoration-underline">Current page:</p> 
+<div class="d-flex flex-column align-items-left mb-0 mb-xl-4 ps-3 mt-3 mt-xl-0 w-100" id="hideable-container">
+    {(page && course) &&
+    <p class="mb-2 fw-bold text-black h5 text-decoration-underline ">Current page:</p> 
     <button class="btn d-inline-flex align-items-center rounded collapsed sidebar-btn p-0 mb-1" data-bs-toggle="collapse" data-bs-target="#navtree-collapse">
         
-        <p class='text-center text-black my-0 h5 fw-bold flex-shrink-0'>{pretty_page_names[course][page]}</p>
+        <p class='text-start text-black my-0 h5 fw-bold text-wrap '>{pretty_page_names[course][page]}</p>
     </button>
     <div id="navtree-collapse" class="collapse">
         <ul class='list-group list-group-flush py-0' id="nav-tree-container">
 
         </ul>
     </div>
+    }
 </div>
 
 <script is:inline define:vars={{data}}>
