--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -10,144 +10,177 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 ---
 <Layout title="Axial Loading">
-<Section id="axial_loading" title="Axial Loading"></Section>
-<SubSection id="notation_and_convention" title="Notation and Convention">
-<Image src="/Solid_Mechanics/Axial Loading-Figures/Notation.png" width="5"/>Notation
+<Section title="Axial Loading" id="axial_loading"></Section>
+
+<SubSection title="Notation and Convention" id="notation_and_convention">
+
+<Image src='/Solid_Mechanics/Axial Loading-Figures/Notation.png' width='5'>Notation</Image>
 
 <ul>
-<li> <strong>Displacement of points in space:</strong>  the movement of a point relative to its initial position in space (ex;  <InlineEquation equation="\\delta_B" /> )</li>
-<li><strong>Change in length of a segment:</strong>  the relative displacement of a point with respect to another point (ex;  <InlineEquation equation="\\delta_{B/A} = \\delta_B - \\delta_A = \\delta_1" /> ). This can be written multiple ways:
-     <DisplayEquation equation="\\delta_{AD} \\equiv \\delta_{DA} \\equiv \\delta_{A/D} \\equiv \\delta_{D/A}\\"></DisplayEquation></li>
+    <li>   <strong>Displacement of points in space:</strong>  the movement of a point relative to its initial position in space (ex;  <InlineEquation equation='\\delta_B' /> )</li>
+     <li><strong>Change in length of a segment:</strong>  the relative displacement of a point with respect to another point (ex;  <InlineEquation equation='\\delta_{B/A} = \\delta_B - \\delta_A = \\delta_1' /> ). This can be written multiple ways:
+     <DisplayEquation equation='\\delta_{AD} \\equiv \\delta_{DA} \\equiv \\delta_{A/D} \\equiv \\delta_{D/A}\\' /></li>
 </ul>
 <strong>Sign Conventions for internal forces in a bar.</strong>
 <ul>
-<li><InlineEquation equation="F&gt;0" /> : tension</li>
-<li><InlineEquation equation="F&lt;0" /> : compression</li>
-<li><InlineEquation equation="\\delta&gt;0" /> : elongation</li>
-<li><InlineEquation equation="\\delta&lt;0" /> : contraction</li>
+     <li><InlineEquation equation='F>0' /> : tension</li>
+     <li><InlineEquation equation='F<0' /> : compression</li>
+     <li><InlineEquation equation='\\delta>0' /> : elongation</li>
+     <li><InlineEquation equation='\\delta<0' /> : contraction</li>
 </ul>
-</SubSection>
-<SubSection id="saint-venant's_principle_slender_beam_case" title="Saint-Venant's Principle: slender beam case">
-<Image src="/Solid_Mechanics/Axial Loading-Figures/Saint-Venants.png" width="5"/>Notation
-
-<p>Stress analysis very near to the point of application of load <InlineEquation equation="P" />. <strong>Saint-Venant's principle:</strong> the stress and strain produced at points in a body <em>sufficiently removed</em>* from the region of external load application will be the same as the stress and strain produced by any other applied external loading that has the same statically equivalent resultant and is applied to the body within the same region.</p> 
-
- *farther than the widest dimension of the cross Section
 
 </SubSection>
-<SubSection id="force-deformation_relation" title="Force-Deformation Relation">
-<DisplayEquation equation="\\delta = \\frac{PL}{EA}\\"></DisplayEquation>
 
- Axial Flexibility: <DisplayEquation equation="\\delta = fP   =&gt;   f = \\frac{L}{EA}\\"></DisplayEquation>
+<SubSection title="Saint-Venant's Principle: slender beam case" id="saint-venants_principle_slender_beam_case">
 
- Axial Stiffness: <DisplayEquation equation="P = k\\delta   =&gt;   k = \\frac{EA}{L}\\"></DisplayEquation>
+    <Image src='/Solid_Mechanics/Axial Loading-Figures/Saint-Venants.png' width='5'>Notation</Image>
+
+<p>Stress analysis very near to the point of application of load <InlineEquation equation='P' />. <strong>Saint-Venant's principle:</strong> the stress and strain produced at points in a body <em>sufficiently removed</em>* from the region of external load application will be the same as the stress and strain produced by any other applied external loading that has the same statically equivalent resultant and is applied to the body within the same region.</p> 
+
+ *farther than the widest dimension of the cross section
+
+</SubSection>
+
+<SubSection title="Force-Deformation Relation" id="force-deformation_relation"> 
+
+<DisplayEquation equation='\\delta = \\frac{PL}{EA}\\' />
+
+ Axial Flexibility: <DisplayEquation equation='\\delta = fP   =>   f = \\frac{L}{EA}\\' />
+
+ Axial Stiffness: <DisplayEquation equation='P = k\\delta   =>   k = \\frac{EA}{L}\\' />
+
+ <strong>*Expandable Derivation*</strong>
+
+<DisplayEquation equation='P = \\sigma A\\' />
+<DisplayEquation equation='\\sigma = E\\varepsilon\\' />
+<DisplayEquation equation='\\varepsilon = \\delta / L\\' />
+<DisplayEquation equation='=>   P = E\\frac{\\delta}{L}A\\' />
+ <strong>**End Derivation**</strong>
+
+</SubSection>
+
+<SubSection title="Axially Varying Properties" id="axially_varying_properties"> 
+For non-uniform load, material property and cross-section area:
+
+ <DisplayEquation equation='\\delta = \\int_0^L\\frac{F(x)}{E(x)A(x)}dx\\' />
+
+ Assume variations with <InlineEquation equation='x' /> are "mild" (on length scale longer than cross-sectional length scales)
+
 <strong>*Expandable Derivation*</strong>
-<DisplayEquation equation="P = \\sigma A\\"></DisplayEquation>
-<DisplayEquation equation="\\sigma = E\\varepsilon\\"></DisplayEquation>
-<DisplayEquation equation="\\varepsilon = \\delta / L\\"></DisplayEquation>
-<DisplayEquation equation="=&gt;   P = E\\frac{\\delta}{L}A\\"></DisplayEquation>
+ <DisplayEquation equation='\\sigma = E\\varepsilon\\' /> 
+ <DisplayEquation equation='\\frac{F(x)}{A(x)} = E(x)\\varepsilon(x)\\' /> 
+ <DisplayEquation equation='\\frac{F(x)}{A(x)} = E(x)\\frac{d\\delta(x)}{dx}\\' /> 
+ <DisplayEquation equation='d\\delta = \\frac{F(x)}{E(x)A(x)}dx\\' /> 
 <strong>**End Derivation**</strong>
+
 </SubSection>
-<SubSection id="axially_varying_properties" title="Axially Varying Properties"> 
-For non-uniform load, material property and cross-Section area:
 
- <DisplayEquation equation="\\delta = \\int_0^L\\frac{F(x)}{E(x)A(x)}dx\\"></DisplayEquation>
-
- Assume variations with <InlineEquation equation="x" /> are "mild" (on length scale longer than cross-Sectional length scales)
-
-<strong>*Expandable Derivation*</strong>
-<DisplayEquation equation="\\sigma = E\\varepsilon\\"></DisplayEquation>
-<DisplayEquation equation="\\frac{F(x)}{A(x)} = E(x)\\varepsilon(x)\\"></DisplayEquation>
-<DisplayEquation equation="\\frac{F(x)}{A(x)} = E(x)\\frac{d\\delta(x)}{dx}\\"></DisplayEquation>
-<DisplayEquation equation="d\\delta = \\frac{F(x)}{E(x)A(x)}dx\\"></DisplayEquation>
-<strong>**End Derivation**</strong>
-</SubSection>
-<SubSection id="principle_of_superposition_" title="Principle of Superposition ">
+<SubSection title="Principle of Superposition " id="principle_of_superposition_">
 
 Superposition: If the displacements are (1) small and (2) linearly related to the force components acting, the displacements caused by the components can be added up:
 
-<DisplayEquation equation="\\delta = \\sum_i \\delta_i = \\sum_i \\frac{F_i L_i}{E_i A_i}\\"></DisplayEquation>
+<DisplayEquation equation='\\delta = \\sum_i \\delta_i = \\sum_i \\frac{F_i L_i}{E_i A_i}\\' />
+
 </SubSection>
-<SubSection id="general_solving_procedure" title="General Solving Procedure">
+
+<SubSection title="General Solving Procedure" id="general_solving_procedure">
 <ol>
-<li>Draw a FBD
+	<li>Draw a FBD
     </li>
-<li>Equilibrium equations: force balance and moment balance
+	<li>Equilibrium equations: force balance and moment balance
     </li>
-<li>Constitutive equations: stress-strain or force-displacement relations
+	<li>Constitutive equations: stress-strain or force-displacement relations
     </li>
-<li>Compatibility equations: geometric constraints
+	<li>Compatibility equations: geometric constraints
 </li>
 </ol>
 </SubSection>
-<SubSection id="statically_determinate_problems" title="Statically Determinate Problems">
-<Image src="/Solid_Mechanics/Axial Loading-Figures/StaticallyDeterminate.png" width="4"/> 
-    Statically determinate
 
+
+
+<SubSection title="Statically Determinate Problems" id="statically_determinate_problems">
+
+<Image src='/Solid_Mechanics/Axial Loading-Figures/StaticallyDeterminate.png' width='4'> 
+    Statically determinate
+</Image>
 
 All internal forces can be obtained from equilibrium analysis only
 
 </SubSection>
-<SubSection id="statically_indeterminate_problems" title="Statically Indeterminate Problems">
-<Image src="/Solid_Mechanics/Axial Loading-Figures/StaticallyIndeterminate.png" width="3"/>
-    Statically indeterminate
 
+<SubSection title="Statically Indeterminate Problems" id="statically_indeterminate_problems">
+
+<Image src='/Solid_Mechanics/Axial Loading-Figures/StaticallyIndeterminate.png' width='3'>
+    Statically indeterminate
+</Image>
 
  Equilibrium does not determine all internal forces.
 
 </SubSection>
-<SubSubSection id="thermal_effects_temperature_changes" title="Thermal Effects: Temperature Changes">
+
+<SubSubSection title="Thermal Effects: Temperature Changes" id="thermal_effects_temperature_changes">
+
 <strong>Notation</strong>
-<ul>
-<li> <InlineEquation equation="\\Delta T &gt; 0, \\sigma &lt; 0" /> : Compression</li>
-<li> <InlineEquation equation="\\Delta T &lt; 0, \\sigma &gt; 0" /> : Tension</li>
-</ul>
+<ul> 
+     <li>  <InlineEquation equation='\\Delta T > 0, \\sigma < 0' /> : Compression</li> 
+     <li>   <InlineEquation equation='\\Delta T < 0, \\sigma > 0' /> : Tension</li> 
+</ul> 
+
 <p>
-<InlineEquation equation="\\delta_T" /> ,  <InlineEquation equation="\\varepsilon_T" />  present in addition to elastic  <InlineEquation equation="\\delta_E" /> ,  <InlineEquation equation="\\varepsilon_E" />  (from internal forces). Superposition (small strains):
- <DisplayEquation equation="\\varepsilon_{tot} = \\varepsilon_{E} + \\varepsilon_{T}\\"></DisplayEquation>
-<DisplayEquation equation="\\delta_{tot} = \\delta_{E} + \\delta_{T}\\"></DisplayEquation>
+    <InlineEquation equation='\\delta_T' /> ,  <InlineEquation equation='\\varepsilon_T' />  present in addition to elastic  <InlineEquation equation='\\delta_E' /> ,  <InlineEquation equation='\\varepsilon_E' />  (from internal forces). Superposition (small strains):
+ <DisplayEquation equation='\\varepsilon_{tot} = \\varepsilon_{E} + \\varepsilon_{T}\\' /> 
+  <DisplayEquation equation='\\delta_{tot} = \\delta_{E} + \\delta_{T}\\' /> 
 </p>
-<Image src="/Solid_Mechanics/Axial Loading-Figures/Temperature_NoLoad.png" width="4"/>Temperature changes with no applied loads
 
- A rod rests freely on a smooth horizontal surface. Temperature of the rod is raised by <InlineEquation equation="\\Delta T" />. Rod elongates by an amount.
+<Image src='/Solid_Mechanics/Axial Loading-Figures/Temperature_NoLoad.png' width='4'>Temperature changes with no applied loads</Image>
 
-<DisplayEquation equation="\\delta_{T} = \\alpha \\Delta T L\\"></DisplayEquation>
+ A rod rests freely on a smooth horizontal surface. Temperature of the rod is raised by <InlineEquation equation='\\Delta T' />. Rod elongates by an amount.
 
- Linear coefficient of thermal expansion <InlineEquation equation="\\alpha" />,  <InlineEquation equation="[\\alpha] = \\frac{1}{K},\\frac{1}{°C},..." />. This deformation is associated with an average thermal strain:
+<DisplayEquation equation='\\delta_{T} = \\alpha \\Delta T L\\' />
 
-<DisplayEquation equation="\\varepsilon_{T} = \\frac{\\delta_T}{L} = \\alpha T\\"></DisplayEquation>
-<Image src="/Solid_Mechanics/Axial Loading-Figures/Temperature_TwoPlates.png" width="1.5"/>  
+ Linear coefficient of thermal expansion <InlineEquation equation='\\alpha' />,  <InlineEquation equation='[\\alpha] = \\frac{1}{K},\\frac{1}{°C},...' />. This deformation is associated with an average thermal strain:
+
+<DisplayEquation equation='\\varepsilon_{T} = \\frac{\\delta_T}{L} = \\alpha T\\' />
+
+<Image src='/Solid_Mechanics/Axial Loading-Figures/Temperature_TwoPlates.png' width='1.5'>  
     Temperature changes with statically indeterminate beam
+</Image>
 
+ Initially, rod of length <InlineEquation equation='L' /> is placed between two supports at a distance <InlineEquation equation='L' /> from each other. With no internal forces, there is no stress or strain.
 
- Initially, rod of length <InlineEquation equation="L" /> is placed between two supports at a distance <InlineEquation equation="L" /> from each other. With no internal forces, there is no stress or strain.
-
-<DisplayEquation equation="R_{A} = R_{B} = 0\\"></DisplayEquation>
-<DisplayEquation equation="R_{A} = F\\"></DisplayEquation>
+<DisplayEquation equation='R_{A} = R_{B} = 0\\' />
+<DisplayEquation equation='R_{A} = F\\' />
                   
  After raising the temperature, the total elongation of the rod is still zero. The total elongation is given by:
 
-<DisplayEquation equation="\\delta = \\frac{FL}{EA} + \\alpha L \\Delta T = 0\\"></DisplayEquation>
+<DisplayEquation equation='\\delta = \\frac{FL}{EA} + \\alpha L \\Delta T = 0\\' />
 
  The stress in the rod due to change in temperature is given by:
-<DisplayEquation equation="\\sigma = -\\alpha E \\Delta T\\"></DisplayEquation>
+<DisplayEquation equation='\\sigma = -\\alpha E \\Delta T\\' />
+
 </SubSubSection>
-<SubSubSection id="misfit_problems" title="Misfit Problems">
+
+<SubSubSection title="Misfit Problems" id="misfit_problems">
 A misfit problem is one in which there is difference between a design distance and the manufactured length of a material. Some misfits are created intentionally to pre-strain a member. (e.g. spokes in a bicycle wheel or strings in a tennis racket). This type of problem neither modifies the equilibrium equations (1) nor the force-extension relations, (2) but the compatibility equations, (3) need to be modified.
 
 </SubSubSection>
-<SubSection id="stress_concentration" title="Stress Concentration">
+
+<SubSection title="Stress Concentration" id="stress_concentration">
+    
 <BlueText>BSM: we do not cover this topic in class/hw/exams. It is covered in ME 330 and ME 371.</BlueText>
 
- Highest at lowest cross-Sectional area.
+ Highest at lowest cross-sectional area.
 
-Stress concentration factor: <DisplayEquation equation="K = \\frac{\\sigma_{max}}{\\sigma_{avg}}\\"></DisplayEquation>
+Stress concentration factor: <DisplayEquation equation='K = \\frac{\\sigma_{max}}{\\sigma_{avg}}\\' />
+
 <ul>
-<li>Found experimentally
+	<li>Found experimentally
     </li>
-<li>Solely based on geometry
+	<li>Solely based on geometry
 </li>
 </ul>
-<strong><RedText>**Reference pages have a broken link Image here**</RedText></strong>
+
+
+ <strong><RedText>**Reference pages have a broken link image here**</RedText></strong>
 </SubSection>
 </Layout>
