--- a/src/pages/sol/material_properties.astro
+++ b/src/pages/sol/material_properties.astro
@@ -8,11 +8,10 @@ import Itemize from "../../components/Itemize.astro"
 import Item from "../../components/Item.astro" 
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
-import BlueText from "../../components/BlueText.astro" 
-import RedText from "../../components/RedText.astro" 
 import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
-import Center from "../../components/Center.astro"
+import CalloutCard from "../../components/CalloutCard.astro"
+import CalloutContainer from "../../components/CalloutContainer.astro"
 ---
 <Layout title="Material Properties">
 <Section title="Material Properties"></Section>
@@ -40,7 +39,7 @@ Loading in this region results <strong>elastic behavior</strong>, meaning the ma
  Hooke's law is used for small deformations in the elastic region. The Young's modulus is the slope <InlineEquation equation="E" />.
 <DisplayEquation equation="\\sigma = E\\varepsilon\\" title="Hooke's law." background="True" />
 
-<Image src='/Solid_Mechanics/Material Properties-Figures/Modulus Examples.png' width='2'> Table screenshot from ref pages. Approximate elastic modulus values for different material families.</Image>
+<Image src='/Solid_Mechanics/Material Properties-Figures/Modulus Examples.png' width='3'> Table screenshot from ref pages. Approximate elastic modulus values for different material families.</Image>
 
 
 <strong>Shear Modulus</strong>
@@ -127,39 +126,41 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
     </Item>
 </Itemize>
 
+<CalloutContainer slot="cards">
+    <CalloutCard title="Heads up!">
+        <p>
+           <strong> Strain Energy</strong> builds on this content in Engineering Materals.
+        </p>
+        <p>
+            Deformation does work on the material: equal to internal strain energy (by energy conservation).
+
+            <DisplayEquation equation="\\Delta U = \\int F_{z}dz = \\int \\sigma_{z}(\\Delta x \\Delta y \\Delta z)d\\varepsilon_{z}\\" />
+
+            Energy density. <DisplayEquation equation="u = \\frac{\\Delta U}{\\Delta V} = \\int \\sigma_{z}d\\varepsilon_{z}\\" />
+
+            Can be generalized to any deformation: areas under stress-strain curves
+
+            <DisplayEquation equation="u = \\int \\sigma d\\varepsilon\ \\quad \\text{or} \\quad u = \\int \\tau d\\gamma\\" />
+        </p>
+    </CalloutCard>
+
+    <CalloutCard title="Heads up!">
+        <p>
+            <strong>Fatigue</strong> builds on this content in Engineering Materals and Mechanical Design.                
+        </p>
+        <p>
+            <Image src='/Solid_Mechanics/Material Properties-Figures/SN Curve.png' width='4'>SN curve examples</Image>
+
+            If stress does not exceed the elastic limit, the specimen returns to its original configuration. However, this is not the case if the loading is repeated thousands or millions of times. In such cases, rupture will happen at stress lower than the fracture stress - this phenomenon is known as fatigue.
+        </p>
+    </CalloutCard>
+</CalloutContainer>
+
 </SubSubSection>
 
 <SubSection title="Other Derived Properties"></SubSection>
 
-    <CalloutContainer slot="cards">
-        <CalloutCard title="Heads  up!">
-            <p>
-               <strong> Strain Energy</strong> builds on this content in Engineering Materals.
-              </p>
-              <p>
-                 Deformation does work on the material: equal to internal strain energy (by energy conservation).
-
-		<DisplayEquation equation="\\Delta U = \\int F_{z}dz = \\int \\sigma_{z}(\\Delta x \\Delta y \\Delta z)d\\varepsilon_{z}\\" />
-
-		 Energy density. <DisplayEquation equation="u = \\frac{\\Delta U}{\\Delta V} = \\int \\sigma_{z}d\\varepsilon_{z}\\" />
-
- 		Can be generalized to any deformation: areas under stress-strain curves
-
-		<DisplayEquation equation="u = \\int \\sigma d\\varepsilon\ \\quad \\text{or} \\quad u = \\int \\tau d\\gamma\\" />
-              </p>
-        </CalloutCard>
-
-        <CalloutCard title="Heads up!">
-            <p>
-		<strong>Fatigue</strong> builds on this content in Engineering Materals and Mechanical Design.                
-              </p>
-		<p>
-		<Image src='/Solid_Mechanics/Material Properties-Figures/SN Curve.png' width='4'>SN curve examples</Image>
-
-		If stress does not exceed the elastic limit, the specimen returns to its original configuration. However, this is not the case if the loading is repeated thousands or millions of times. In such cases, rupture will happen at stress lower than the fracture stress - this phenomenon is known as fatigue.
-		</p>
-        </CalloutCard>
-    </CalloutContainer>
+    
 
 <SubSubSection title="Directional Materials">
 
@@ -176,12 +177,14 @@ Stresses above the plastic limit (<InlineEquation equation="\\sigma_Y < \\sigma"
 
 <DisplayEquation equation="\\varepsilon_{x} = \\frac{\\delta}{L}\\" title="Axial (normal) strain." background="True" />
 
- <DisplayEquation equation="\\nu = -\\frac{\\text{lateral strain}}{\\text{axial strain}}" title=" Poisson's ratio <InlineEquation equation="\\nu" />." background="True" />
+ <DisplayEquation equation="\\nu = -\\frac{\\text{lateral strain}}{\\text{axial strain}}" title=" Poisson's ratio \\(\\nu\\)." background="True" />
 
-<DisplayEquation equation="0 < \\nu < 0.5\\" title="Typical range" background="True" /> 
+<DisplayEquation equation="0 < \\nu < 0.5\\" title="Typical range." background="True" /> 
 
 <DisplayEquation equation="\\varepsilon_{z} = \\varepsilon_{y} = -\\nu\\varepsilon_{x}\\" title="Lateral strain." background="True" />
 
  <strong>Negative Poisson's Ratio (auxetics)</strong>
 
  Possible because of non-trivial structure of the material.
+</SubSubSection>
+</Layout>
